	* examples/tests/builtin_safety1.out: Likewise.
	* examples/tests/builtin_safety2.out: Likewise.

2010-08-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* src/dlvhex/BoostComponentFinder.cpp: Applied the nice part of the
	clang diff (the one that does not deal with a clang bug).
	* Modelbuilding-Concept.txt: Thoughts on online vs offline and
	projected vs non projected model building.

2010-08-04  Peter Schueller  <ps@kr.tuwien.ac.at>

	* m4/boost.m4: Temporary fix for iostreams configure check for
	boost versions >=1.44.

2010-07-19  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* TODO: Update.

	* include/dlvhex/Makefile.am: Highlight which header file belongs
	to which library.

2010-07-17  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	Release version 1.7.1.

	* configure.ac: Bump version to 1.7.1.

	* NEWS: Describe changes to 1.7.1.

	* MAINTAINER-README: Update.
	* README: Likewise.

2010-07-16  Peter Schueller  <ps@kr.tuwien.ac.at>

	* clang.diff: Added diff to make it build with clang (debug stream does
	not work, as boost::iostream currently does not work with clang, there
	are other strange issues)

2010-07-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Add some checks for BitMagic (configure
	--with-bmagic=local forces local installation).

2010-07-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* bm3.7.0/*: Added BitMagic library sources to tree
	(http://bmagic.sourceforge.net/).

2010-07-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dlvhex/Model.h: Initial draft.

2010-07-15  Peter Schueller  <ps@kr.tuwien.ac.at>

	* Table-Concept.txt: More comments.
	* Modelbuilding-Concept.txt: Started writing concept
	for model representation (and later model building).

2010-07-15  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* Table-Concept.txt: Add some comments.
	Orgmode.
	* ID-Concept.txt: Likewise.

2010-07-14  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/ASPSolverManager.h: Revised ASPSolver interface