@@ -331,6 +331,37 @@ public:
   }
 };
 
+
+class TestMinusOneAtom:
+	public ComfortPluginAtom
+{
+public:
+	TestMinusOneAtom():
+		// monotonic, as only constant inputs
+		ComfortPluginAtom("testMinusOne", true)
+	{
+			addInputConstant();
+			setOutputArity(1);
+	}
+
+	virtual void
+	retrieve(const ComfortQuery& query, ComfortAnswer& answer)
+	{
+		assert(query.input.size() == 1);
+		if( !query.input[0].isInteger() )
+			throw PluginError("TestMinusOneAtom can only process integer inputs!");
+
+		int i = query.input[0].intval;
+		if( i > 0 )
+			i--;
+
+		ComfortTuple t;
+		t.push_back(ComfortTerm::createInteger(i));
+		answer.insert(t);
+	}
+};
+
+
 class TestEvenAtom:
 	public ComfortPluginAtom
 {
@@ -410,6 +441,7 @@ public:
 	  ret.push_back(PluginAtomPtr(new TestZeroArityAtom("testZeroArity1", true), PluginPtrDeleter<PluginAtom>()));
 	  ret.push_back(PluginAtomPtr(new TestConcatAtom, PluginPtrDeleter<PluginAtom>()));
 	  ret.push_back(PluginAtomPtr(new TestSetMinusAtom, PluginPtrDeleter<PluginAtom>()));
+	  ret.push_back(PluginAtomPtr(new TestMinusOneAtom, PluginPtrDeleter<PluginAtom>()));
 	  ret.push_back(PluginAtomPtr(new TestEvenAtom, PluginPtrDeleter<PluginAtom>()));
 	  ret.push_back(PluginAtomPtr(new TestOddAtom, PluginPtrDeleter<PluginAtom>()));
 
